--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>price-calc-dental</title>
+    <meta name="theme-color" content="#090909" />
+    <meta name="description" content="Software Clínico Dental Profesional" />
+    
+    <title>ShiningCloud | Dental</title>
+
+    <link rel="icon" type="image/svg+xml" href="/dental-icon.svg" />
+    <link rel="apple-touch-icon" href="/dental-icon.svg" />
+
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
